--- a/server/client/public/index.html
+++ b/server/client/public/index.html
@@ -13,7 +13,7 @@
     </script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Rank me</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
